feat: bulk update of orders is added and also integrated the toast

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keep_invoice",
+  "name": "woo_order_management",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -33,6 +33,7 @@
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
