--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@uploadthing/react": "^7.1.5",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +36,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^2.5.4",
+    "uploadthing": "^7.4.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
