--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.454.0",
+    "maplibre-gl": "^5.6.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "next": "15.0.2",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.18",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
